<resources>
    <string name="app_name">Hillforts</string>
    <string name="button_addHillfort">Add Hillfort</string>
    <string name="hint_hillfortTitle">Hillfort Title</string>
    <string name="hint_hillfortDescription">Description </string>
    <string name="menu_viewAllHillforts">Map</string>
    <string name="menu_search">Search</string>
    <string name="menu_cancelHillfort">Cancel</string>
    <string name="menu_shareHillfort">Hillfort</string>
    <string name="menu_savePlacemark">Save</string>
    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_delete">Delete</string>
    <string name="menu_settings">Settings</string>
    <string name="text_visited">Visited</string>
    <string name="menu_logout">Logout</string>
    <string name="enter_hillfort_title">Please enter a Hillfort Title</string>
    <string name="save_hillfort">Save Hillfort</string>
    <string name="select_hillfort_image">Select hillfort image</string>
    <string name="button_location">Set Location</string>
    <string name="title_activity_map">Map</string>
    <string name="additional_note">Additional Note</string>
    <string name="close">Close</string>
    <string name="open">Open</string>
    <string name="title_activity_hillfort_maps">Map of All Hillforts</string>
    <string name="hillfort_image_placeholder">Hillfort Image</string>
    <string name="hillfort_title_placeholder">Hillfort Title</string>
    <string name="hillfort_description_placeholder">Hillfort Description</string>
    <string name="title_activity_hillfort_list">Hillforts</string>
    <string name="title_activity_hillfort">Hillfort</string>
    <string name="title_activity_edit_location">Hillfort</string>
</resources>