<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/home"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/add"
            android:title="@string/menu_add"
            />
        <item
            android:id="@+id/edit"
            android:title="@string/menu_edit"
            />
        <item
            android:id="@+id/delete"
            android:title="@string/menu_delete"
            />
        <item
            android:id="@+id/share"
            android:title="@string/menu_share"
            />
    </group>

    <item android:title="Controls">
        <menu>
            <item
                android:id="@+id/settings"
                android:title="@string/menu_settings"
                />
            <item
                android:id="@+id/logout"
                android:title="@string/menu_logout"
                />
        </menu>
    </item>
</menu>