<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.project.hilforts.views.hillfort.HillfortView">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:fitsSystemWindows="true"
            app:elevation="1dip"
            app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:titleTextColor="@color/colorPrimary" />

        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/appBarLayout">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignTop="@+id/appBarLayout"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="0dp"
                android:layout_marginBottom="0dp">

                <TextView
                    android:id="@+id/textViewForImages"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="24dp"
                    android:layout_marginBottom="20dp"
                    android:gravity="center_horizontal"
                    android:text="Please Click on the Image Views to Add/Update the foto"
                    android:textSize="13sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/visitedLayout1" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/imgLayout1"
                    android:layout_width="392dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="8dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewForImages">

                    <ImageView
                        android:id="@+id/hillfortImage1"
                        android:layout_width="91dp"
                        android:layout_height="91dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/hillfortImage2"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/ic_launcher" />

                    <ImageView
                        android:id="@+id/hillfortImage2"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/hillfortImage3"
                        app:layout_constraintStart_toEndOf="@+id/hillfortImage1"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/ic_launcher" />

                    <ImageView
                        android:id="@+id/hillfortImage3"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/hillfortImage4"
                        app:layout_constraintStart_toEndOf="@+id/hillfortImage2"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/ic_launcher" />

                    <ImageView
                        android:id="@+id/hillfortImage4"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/hillfortImage3"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@mipmap/ic_launcher" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <EditText
                    android:id="@+id/hillfortTitle"
                    android:layout_width="392dp"
                    android:layout_height="47dp"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="15dp"
                    android:autofillHints=""
                    android:hint="@string/hint_hillfortTitle"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">
                    <requestFocus/>
                </EditText>


                <EditText
                    android:id="@+id/description"
                    android:layout_width="249dp"
                    android:layout_height="62dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:hint="@string/hint_hillfortDescription"
                    android:inputType="text"
                    android:maxLength="25"
                    android:maxLines="1"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toStartOf="@+id/lat"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hillfortTitle" />

                <TextView
                    android:id="@+id/lat"
                    android:layout_width="95dp"
                    android:layout_height="19dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="00.000000"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/hillfortTitle" />

                <TextView
                    android:id="@+id/lng"
                    android:layout_width="92dp"
                    android:layout_height="19dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="00.000000"
                    android:textAlignment="textEnd"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/lat" />


                <EditText
                    android:id="@+id/additionalNote"
                    android:layout_width="394dp"
                    android:layout_height="82dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="9dp"
                    android:hint="@string/additional_note"
                    android:inputType="text"
                    android:padding="8dp"
                    android:textColor="@color/colorPrimaryDark"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/description" />

                <LinearLayout
                    android:id="@+id/visitedLayout1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    android:orientation="horizontal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/additionalNote">

                    <CheckBox
                        android:id="@+id/visited"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="16dp"
                        android:text="Visited" />

                    <TextView
                        android:id="@+id/textViewForVisited"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:textSize="13sp" />

                </LinearLayout>

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="363dp"
                    android:layout_height="162dp"
                    android:layout_marginStart="180dp"
                    android:layout_marginTop="15dp"
                    android:layout_marginEnd="181dp"
                    android:layout_marginBottom="87dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imgLayout1" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </ScrollView>

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>